Fixed TicTacToe layout bug

--- a/source/M426_TicTacToe/wwwroot/css/game.css
+++ b/source/M426_TicTacToe/wwwroot/css/game.css
@@ -1,5 +1,7 @@
 ﻿.GameBoard {
+    min-width: 210px;
     width: 50vh;
+    min-height: 210px;
     height: 50vh;
     margin: auto;
     display: flex;
@@ -22,7 +24,7 @@
     width: 100%;
     height: 100%;
     border: 1px solid black;
-    font-size: 60px;
+    font-size: 40px;
     font-family: cursive;
     font-weight: 100;
 }
